# issue-bas-test-macro-print

./: pyproject.toml
tests/issuetests/: issue_test.lpy
